# OpenNeuralEngine

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.aim  Dockerfile.inference  IMPLEMENTATION_PLAN.md  LICENSE  QUICKSTART.md  README.md  Start-SNN.bat  Start-SNN.ps1  inference.py  launch_web.py  onn.py  pyproject.toml  test_vram.py  train.py
aim_data/.aim_metrics/: benchmark_1764878605.json  learning_1764878605.json
archive/experimental_optimizers/: ULTRA_LOW_VRAM.md  aim_integration.py  async_pipeline.py  auto_optimizer.py  cache_optimized.py  cached_layers.py  checkpoint_manager.py  chunked_loading.py  gradient_streaming.py  hybrid_cached.py  layer_parallel.py  learning_benchmark.py  low_vram_inference.py  max_gpu_utilization.py  metrics_tracker.py  micro_streaming.py  optimized_sparse.py  optimized_streaming.py  per_layer_grad.py  pipelined_training.py  push_metrics.py  qlora_trainer.py  quant_transfer.py  real_benchmark.py  simple_learning_test.py  sparse_layer.py  streaming_compute.py  tiled_compute.py  training_benchmark.py  ultra_low_vram.py  universal_engine.py  universal_optimizer.py  vllm_wrapper.py
benchmark_results/: BENCHMARK_SUMMARY.md  benchmark_20251204_151758.json  benchmark_20251204_152236.json  comparison.html  learning_results.json  learning_validation.html  training_benchmark.json
config/: config.py  model_config.py
data/Dataset/: 0000.parquet  sample_train.jsonl
docs/: ARCHITECTURE.md  UNIVERSAL_OPTIMIZER.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  (+5 more)
models/phi-4/: config.json  optimal_config.json  special_tokens_map.json  tokenizer_config.json  universal_config.json
output/e2e_multimodal/: training_summary.json
output/e2e_test/: training_summary.json
output/multimodal_test/: training_summary.json
output/test_run/: training_summary.json
output/training_v2/: training_summary.json
output/v2_learning_test/: training_summary.json
output/v3_test/: training_summary.json
scripts/: README.md  aim_inference_extension.py  aim_multi_model_inference.py  aim_native_inference.py  eval_model.py  export_to_onnx.py  launch_aim_inference.py  quantize_model.py  test_grad_stream.py  test_hybrid.py  test_layer_parallel.py  test_micro_stream.py  test_per_layer.py  test_sparse.py  test_streaming.py  test_tiled.py  test_train_phi4.py  test_ultra_low_vram.py
src/: __init__.py
src/Core_Models/: __init__.py  evaluator.py  experiment_tracking.py  hf_compat.py
src/api/: __init__.py  server.py
src/benchmarks/: __init__.py  benchmark.py
src/data_adapters/: __init__.py  audio.py  base.py  image.py  mesh.py  multimodal.py  registry.py  streaming.py  text.py  video.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/inference/: __init__.py  engine.py  server.py
src/orchestration/: __init__.py  architecture_detector.py  config_orchestrator.py  hardware_profiler.py  resource_monitor.py
src/tracking/: __init__.py  aim_logger.py  clearml_tracker.py
src/training/: __init__.py  early_stopping.py  lr_finder.py  merge_lora.py  pipeline.py  pipeline_v2.py  pipeline_v3.py
src/wrappers/: __init__.py  accelerate_wrapper.py  batched_sparse.py  hf_trainer_wrapper.py  model_loader.py  quantization_wrapper.py
tests/: README.md  __init__.py  auto_config.py  conftest.py  helpers.py  run_tests.py  test_accelerate.py  test_api.py  test_data_adapters.py  test_evaluation.py  test_harness.py  test_inference.py  test_orchestration.py  test_pipelines.py  test_universal.py  test_utils.py  test_wrappers.py
utils/: __init__.py  architecture_inspector.py  convert_weights.py  device_manager.py  hf_tokenizer.py  model_io.py  model_loading.py  onnx_export.py  project_paths.py  tokenization.py
(+16 files in other folders)
